fixed overflow on schedule

--- a/public_html/stylesheets/style/style-Main.css
+++ b/public_html/stylesheets/style/style-Main.css
@@ -106,7 +106,9 @@ background: linear-gradient(to bottom,  rgba(191,191,191,1) 0%,rgba(137,137,137,
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#bfbfbf', endColorstr='#898989',GradientType=0 ); /* IE6-9 */
 
 }
-
+.schedule{
+  overflow: auto;
+}
 .schedule .us {
   font-weight:bold;
 }
@@ -168,7 +170,7 @@ td.not-found {
 
 .schedule-holder {
 
-  overflow:hidden;
+  overflow:auto;
 
 }
 
